# vlm-analysis

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
.matplotlib/: fontlist-v390.json
configs/: config.yaml
configs/dataset/: multi_obj_v1.yaml
configs/experiment/: multi_obj.yaml  single_obj.yaml
configs/model/: qwen_3b.yaml
configs/probe/: default.yaml
jobs/: import-env.sh  run_ablation.sh  run_comparison.sh  run_cross_condition.sh  run_logit_analysis.sh  run_prag_comparison.sh  run_similarity.sh
scripts/: extract_features.sh  run_experiment.sh  run_probing.sh
src/ablation/: __init__.py  combination.py  evaluator.py  head_ablation.py  hooks.py  layer_ablation.py  methods.py  multi_head_ablation.py  statistics.py
src/analysis/: __init__.py  similarity.py
src/config/: __init__.py  schema.py
src/data/: __init__.py  collate.py  dataset.py
src/models/: __init__.py  base.py  gemma.py  intern_vl.py  llava.py  qwen.py  registry.py
src/probing/: __init__.py  cross_condition.py  prag.py  prag_analysis.py  prag_layers.py  prag_statistics.py  readout_intervention.py  runner.py  trainer.py
src/scripts/: extract_features.py  run_ablation.py  run_comparison.py  run_cross_condition.py  run_experiment.py  run_logit_analysis.py  run_prag_comparison.py  run_probing.py  run_similarity_analysis.py
src/utils/: __init__.py  model_utils.py  paths.py
src/visualization/: __init__.py  ablation_plots.py  logit_plots.py  plots.py  prag_plots.py  probing_plots.py  similarity_plots.py  styles.py
